--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+
+  dio: 2.0.14
+
   flutter:
     sdk: flutter
 
@@ -25,6 +28,9 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+
+  dio: 2.0.14
+
   flutter_test:
     sdk: flutter
 
