首页新闻页实现

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ environment:
 
 dependencies:
 
+  json_annotation: ^2.0.0
+
   dio: 2.0.14
 
   flutter:
@@ -28,6 +30,9 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  build_runner: ^1.0.0
+
+  json_serializable: ^2.0.0
 
   dio: 2.0.14
 
@@ -47,9 +52,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
